# akinator

./: CMakeCache.txt  CMakeLists.txt  Makefile  akinator  akinator-tree-print  akinator.cbp  akinator.cpp  akinator_functions.cpp  akinator_tree  cmake_install.cmake  example.dot  print_tree.cpp  strings_read_functions.h  tree_graph.dot
auxilary_functions/: akinator_functions.h
main_sources/: akinator.cpp  print_tree.cpp
